// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.confidential_match.mrp.api;

option java_package = "com.google.cm.mrp.api";
option java_outer_classname = "ApplicationProto";

enum ApplicationId {
  reserved 4;
  APPLICATION_ID_UNSPECIFIED = 0;
  CUSTOMER_MATCH = 1;
  ADH = 2;
  MIC = 3;
  COPLA = 5;
  MIC_AUDIENCE = 6;
}
